--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
             <input type="text" id="min"/>
             <input type="text" id="max"/>
         </div>
-        <script src="index.ts"></script>
+        <script src="./index.js"></script>
     </body>
 </html>
