lab4 + some improvements

--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -8,9 +8,10 @@
   <body>
     <main>
       <form class="cityForm">
-        <input type="text"/> 
-        <button>Add</button>
+        <input type="text" placeholder="Type your city"/> 
+        <button type="submit">Add</button>
       </form>
+      <div class="container"></div>
     </main>
     <script src="index.js"></script>
   </body>
